@@ -1,3 +1,11 @@
+2002-01-22  Tom Tromey  <tromey@redhat.com>
+
+	* m4/gcj.m4 (AM_PROG_GCJ): Don't invoke dependency code if
+	no-dependencies option is set.
+	* m4/init.m4 (AM_INIT_AUTOMAKE): Don't invoke dependency code if
+	no-dependencies option is set.  Don't call AM_DEP_TRACK or
+	AM_SET_DEPDIR.
+
 2002-01-22  Pavel Roskin  <proski@gnu.org>
 
 	* tests/asm.test: Use CCAS and CCASFLAGS instead of AS and 
